# NCAA_PREDS_26

./: .gitignore  .vercelignore  README.md  ncaa_26.md  ncaa_26_links.md  pyproject.toml  vercel.json
data/manual/2026/: team_alias_overrides.csv
data/output/2026/: combined_ratings.csv  combined_ratings_small.csv  matchup_lab_2026.html  matchup_summary.csv  monte_carlo_tourney_results.csv  most_unlikely_bracket_2026.html  most_unlikely_bracket_2026.json  retro_bracket_2026.html
data/processed/2026/: bracket_field_68.csv  bracket_metadata.json  bracket_round64.csv  first_four.csv  join_qa.csv  ratings_inputs.csv  team_aliases.csv
data/raw/2026/: ap_latest.html  ap_latest.html.meta.json  ap_preseason.html  ap_preseason.html.meta.json  bracket.pdf.meta.json  bracket_article.html  bracket_article.html.meta.json  elo.html  elo.html.meta.json  torvik.json  torvik.json.meta.json  torvik.selected
src/ncaa_preds26/: __init__.py  cli.py  constants.py  fetch.py  html_tables.py  naming.py  paths.py  pipeline.py  pixel_icon.py  prepare.py  ratings.py  render_bracket.py  render_matchup_explorer.py  render_rarest_bracket.py  report.py  simulate.py
tests/: test_prepare.py  test_ratings.py  test_render_bracket.py  test_report.py  test_simulate.py
