[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncaa-preds26"
version = "0.1.0"
description = "CLI and library for the 2026 NCAA men's tournament prediction workflow."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "beautifulsoup4>=4.12",
  "numpy>=2.2",
  "pandas>=2.2",
  "pydantic>=2.0",
  "requests>=2.32",
  "scikit-learn>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ncaa26 = "ncaa_preds26.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
